Fix small sponsor logos in dark mode

--- a/frontend/src/assets/styles/components/SustainingMembers.scss
+++ b/frontend/src/assets/styles/components/SustainingMembers.scss
@@ -7,6 +7,9 @@
   grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
   grid-auto-rows: 100px;
   margin-top: 24px;
+  background: white;
+  border-radius: 10px;
+  padding-top: 2rem;
 
   img {
     max-width: 75px;
